--- a/drap/drag.htm
+++ b/drap/drag.htm
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>拖动、吸入、排序</title>
-  <link rel="stylesheet" href="drap.css">
+  <link rel="stylesheet" href="css/drag.css">
 </head>
 <body>  
   <div class="box"></div>
   <div class="box-wrap"></div>
   <div class="box-wrapBg"></div>
-  <script src="drap.js"></script>
+  <script src="js/drag.js"></script>
 </body>
 </html>
