--- a/drap/dragFn.htm
+++ b/drap/dragFn.htm
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>拖拽封装</title>
-	<link rel="stylesheet" href="css/drapFn.css">
+	<link rel="stylesheet" href="css/dragFn.css">
 </head>
 <body>
 	<section class="wrap">
 		<div class="drap1">1</div>
 	</section>
-	<script src="js/drapFn.js"></script>
+	<script src="js/dragFn.js"></script>
 </body>
 </html>
