--- a/drap/dragSort.htm
+++ b/drap/dragSort.htm
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>拖动排序</title>
-	<link rel="stylesheet" href="css/dropSort.css">
+	<link rel="stylesheet" href="css/drogSort.css">
 </head>
 <body>
 	<div class="container">
@@ -15,6 +15,6 @@
 			<li>0005</li>
 		</ul>
 	</div>
-	<script src="js/drapSort.js"></script>
+	<script src="js/dragSort.js"></script>
 </body>
 </html>
